--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -19,7 +19,7 @@
           <!-- gallery-wrap .end// -->
         </aside>
         <main class="col-md-6 border-left">
-          <form action="{% url 'increment_cart' single_product.id %}" method="POST">
+          <form action="{% url 'add_cart' single_product.id %}" method="POST">
             {% csrf_token %}
             <article class="content-body">
               <h2 class="title">{{ single_product.item_name }}</h2>
@@ -37,7 +37,7 @@
                     <select name="color" class="form-control" required>
                       <option value="" disabled selected>Available Colors</option>
                       {% for i in single_product.variation_set.colors %}
-                        <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst}}</option>
+                        <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
                       {% endfor %}
                     </select>
                 </div>
