--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -50,7 +50,7 @@
                   <div class="col">
                     <div class="input-group input-spinner">
                       <div class="input-group-prepend">
-                        <a href="{% url 'decrement_cart' item.product.id %}"
+                        <a href="#"
                           class="btn btn-light"
                           type="button"
                           id="button-minus"
