--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -17,26 +17,26 @@
             <thead class="text-muted">
               <tr class="small text-uppercase">
                 <th scope="col">Product</th>
-                <th scope="col" width="120">Quantity</th>
-                <th scope="col" width="120">Price</th>
-                <th scope="col" class="text-right" width="200"></th>
+                <th scope="col" style="width: 120px">Quantity</th>
+                <th scope="col" style="width: 120px">Price</th>
+                <th scope="col" class="text-right" style="width: 200px"></th>
               </tr>
             </thead>
             <tbody>
-              {% for item in cart_items %}
+              {% for cart_item in cart_items %}
               <tr>
                 <td>
                   <figure class="itemside align-items-center">
                     <div class="aside">
-                      <img src="{{ item.product.item_image.url }}" class="img-sm" />
+                      <img src="{{ cart_item.product.item_image.url }}" class="img-sm" />
                     </div>
                     <figcaption class="info">
-                      <a href="{{ item.product.get_url }}" class="title text-dark"
-                        >{{ item.product.item_name }}</a
+                      <a href="{{ cart_item.product.get_url }}" class="title text-dark"
+                        >{{ cart_item.product.item_name }}</a
                       >
                       <p class="text-muted small">
-                        {% if item.variations.all %}
-                          {% for i in item.variations.all %}
+                        {% if cart_item.variations.all %}
+                          {% for i in cart_item.variations.all %}
                             {{ i.variation_category | capfirst }} :
                             {{ i.variation_value | capfirst}} <br>
                           {% endfor %}
@@ -58,15 +58,21 @@
                           <i class="fa fa-minus"></i>
                         </a>
                       </div>
-                      <input type="text" class="form-control" value="{{ item.quantity }}" />
+                      <input type="text" class="form-control" value="{{ cart_item.quantity }}" />
                       <div class="input-group-append">
-                        <a href="{% url 'add_cart' item.product.id %}"
-                          class="btn btn-light"
-                          type="button"
-                          id="button-plus"
-                        >
-                          <i class="fa fa-plus"></i>
-                        </a>
+                        <form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+                          {% csrf_token %}
+                          {% for item in cart_item.variations.all %}
+                            <input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst}}">
+                          {% endfor %}
+                            <button 
+                              class="btn btn-light"
+                              type="submit"
+                              id="button-plus"
+                            >
+                              <i class="fa fa-plus"></i>
+                            </button>
+                        </form>
                       </div>
                     </div>
                     <!-- input-group.// -->
@@ -75,13 +81,13 @@
                 </td>
                 <td>
                   <div class="price-wrap">
-                    <var class="price">${{ item.sub_total }}</var>
-                    <small class="text-muted"> ${{ item.product.item_price }} each </small>
+                    <var class="price">${{ cart_item.sub_total }}</var>
+                    <small class="text-muted"> ${{ cart_item.product.item_price }} each </small>
                   </div>
                   <!-- price-wrap .// -->
                 </td>
                 <td class="text-right">
-                  <a href="{% url 'delete_cart' item.product.id %}" class="btn btn-danger"> Remove</a>
+                  <a href="{% url 'delete_cart' cart_item.product.id %}" class="btn btn-danger"> Remove</a>
                 </td>
               </tr>
               {% endfor %}
